# adventofcode-2025

./: .gitignore  CMakeLists.txt  Package.swift
Sources/: main.swift
Sources/day1/: day1part1.swift  day1part2.swift  part1.swift  part2.swift
Sources/day2/: day2part1.swift  day2part2.swift
Sources/day3/: day3part1.swift  day3part2.swift
Sources/day4/: day4part1.swift  day4part2.swift
day1/: input.txt  one.swift  two.swift
